python-graph
A library for working with graphs in Python
--------------------------------------------------------------------------------

CHANGELOG


Release 1.6.1	[??? ??, 2009]

Important API Changes:
	Removed methods calling algorithms from graph and digraph classes;
	pygraph.algorithms.cycles.find_cycle does not take argument directed anymore;
	Removed methods read and write from graph and digraph classes;
	Functions for writing and reading graphs now in pygraph algorithms.
	
Release 1.6.0	[Jun 06, 2009]

Important API Changes:
	Module name was renamed to pygraph;
	python_graph_exception was renamed to GraphError;
	Exception unreachable was renamed to NodeUnreachable;
	get_edge_weight was renamed to edge_weight;
	get_edge_label was renamed to edge_label;
	get_edge_attributes was renamed to edge_attributes;
	get_node_attributes was renamed to node_attributes;
	degree was renamed to node_degree;
	order was renamed to node_order.

Release 1.5.0	[May 03, 2009]

Enhancements:
	* Assymptotically faster Mutual Accessibility (now using Tarjan's algorithm);
	* DOT-Language importing;
	* Transitive edge detection;
	* Critical path algorithm.

Fixes:
	* Cycle detection algorithm was reporting wrong results on some digraphs;
	* Removed Minimal Spanning Tree from Digraphs as Prim's algorithm does not work on them (Issue 28).
	* Deletion of A--A edge raised an exception;
	* Deletion of an node with an A--A edge raised an exception.

Important API Changes:
	* Removed minimal_spanning_tree() method from the digraph class.


Release 1.4.2	[Feb 22, 2009]

Fixes:
	find_cycle() trapped itself in infinite recursion in some digraphs (Issue 22).


Release 1.4.1	[Feb 09, 2009]

Fixes:
	graph.algorithms.filters was not being installed (Issue 20).


Release 1.4.0	[Feb 07, 2009]

Enhancements:
	Added A* search algorithm (as heuristic_search);
	Added Chow's and Euclidean heuristics for A*;
	Added filtered depth-first and breadth-first search;